@@ -1,3 +1,7 @@
+2012-02-07 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-06-09
+	* Extend module replacement to copys of modules or new instances
+
 2012-02-03 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-08
 	* Add/remove path to/from a primary dataset using Drag&Drop method (bug/feature 82526).
